Bug 938597 - Include pref name in the error message for operations that cannot happen in content processes. r=bsmedberg